--- a/angular-app/src/app/components/categories/categories.component.html
+++ b/angular-app/src/app/components/categories/categories.component.html
@@ -1,43 +1,49 @@
-<div class="row">
-  <div class="col-lg-8">
-    <p>
-      <b>Filter by category name :</b>
-      <select [(ngModel)]="selectedItem" (ngModelChange)="searchCategories()">
-        <option [value]="-1" selected>choose option</option>
-        <option *ngFor="let item of listCategories" [value]="item.id">{{item.title}}</option>
-      </select>
-    </p>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Category Tables
   </div>
-  <div class="col-lg-4">
-    <a class="btn btn-primary btn-xs pull-right " routerLink="/newcategory" preserveQueryParams preserveFragment>
-      <b>+</b> Add new category </a>
-  </div>
-</div>
-<br>
-<div class="row">
-  <div class="col-lg-12">
-    <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let category of filtredCategories">
-          <td>{{category.id}} </td>
-          <td>{{category.title}}</td>
-          <td>
-            <button class="btn btn-link" routerLink="/updatecategory/{{category.id}}" preserveQueryParams preserveFragment>
-              <i class="fa fa-pencil" aria-hidden="true"></i> Update
-            </button>
-            <button class="btn btn-link" (click)="deleteCategory(category.id)">
-              <i class="fa fa-trash" aria-hidden="true"></i> Delete
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="panel-body">
+    <div class="table-responsive">
+      <div class="row">
+        <div class="col-lg-8">
+          <p>
+            <b>Filter by category name :</b>
+            <select [(ngModel)]="selectedItem" (ngModelChange)="searchCategories()">
+              <option [value]="-1" selected>choose category</option>
+              <option *ngFor="let item of listCategories" [value]="item.id">{{item.title}}</option>
+            </select>
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <button type="button" class="btn btn-primary pull-right" routerLink="/newcategory" preserveQueryParams preserveFragment>Add new category</button>
+        </div>
+        <br />
+        <br />
+        <br />
+      </div>
+      <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let category of filtredCategories">
+            <td>{{category.id}} </td>
+            <td>{{category.title}}</td>
+            <td>
+              <button class="btn btn-link" routerLink="/updatecategory/{{category.id}}" preserveQueryParams preserveFragment>
+                <i class="fa fa-pencil" aria-hidden="true"></i> Update
+              </button>
+              <button class="btn btn-link" (click)="deleteCategory(category.id)">
+                <i class="fa fa-trash" aria-hidden="true"></i> Delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
