--- a/angular-app/src/app/components/login/login.component.html
+++ b/angular-app/src/app/components/login/login.component.html
@@ -1,67 +1,52 @@
-<form [ngBusy]="busy" class="form-horizontal"  (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
-  <div  class="row">
-     <div class="col-md-3"></div>
-     <div class="col-md-6">
-         <h4>Login</h4>
-         <hr>
-     </div>
- </div>
- <div class="row">
-     <div class="col-md-3"></div>
-     <div class="col-md-6">
-         <div class="form-group">
-             <label class="sr-only" for="email">E-Mail Address</label>
-             <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                 <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
-                 <input type="email" class="form-control" name="email"
-                 [(ngModel)]="model.email" #username="ngModel" [pattern]="EMAIL_REGEXP" required />
-               </div>
-         </div>
-     </div>
-     <div class="col-md-3">
-             <div class="form-control-feedback" *ngIf="f.submitted && !username.valid">
-                 <span class="text-danger align-middle">
-                     <i class="fa fa-close"></i> Username is required
-                 </span>
-             </div>
-         </div>
- </div>
- <div class="row">
-     <div class="col-md-3"></div>
-     <div class="col-md-6">
-         <div class="form-group">
-             <label class="sr-only" for="password">Password</label>
-             <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                 <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
-                 <input type="password" class="form-control" name="password"
-                 [(ngModel)]="model.password" #password="ngModel" required />
-               </div>
-         </div>
-     </div>
-     <div class="col-md-3">
-             <div class="form-control-feedback" *ngIf="f.submitted && !password.valid">
-                 <span class="text-danger align-middle">
-                     <i class="fa fa-close"></i> Password is required
-                 </span>
-             </div>
-         </div>
- </div>
- <div class="row">
-     <div class="col-md-3"></div>
-     <div class="col-md-6" style="padding-top: .35rem">
-         <div class="form-check mb-2 mr-sm-2 mb-sm-0">
-             <label class="form-check-label">
-                 <input  [(ngModel)]="model.rememberMe"  class="form-check-input" name="rememberMe"
-                        type="checkbox" >
-                 <span style="padding-bottom: .15rem">Remember me</span>
-             </label>
-         </div>
-     </div>
- </div>
- <div class="row" style="padding-top: 1rem">
-     <div class="col-md-3"></div>
-     <div class="col-md-6">
-         <button [disabled]="loading" class="btn btn-primary"><i class="fa fa-sign-in"></i> Login</button>
-     </div>
- </div>
-</form>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4 text-center logo-margin ">
+      <img src="assets/img/logo.png" alt="" />
+    </div>
+    <div class="col-md-4 col-md-offset-4">
+      <div class="login-panel panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Please Sign In</h3>
+        </div>
+        <div class="panel-body">
+          <form role="form" [ngBusy]="busy" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+            <fieldset>
+              <div class="form-group">
+                <input type="email" class="form-control" name="email" [(ngModel)]="model.email" #username="ngModel" [pattern]="EMAIL_REGEXP"
+                  autofocus required />
+              </div>
+
+              <div class="form-group">
+                <div class="form-control-feedback" *ngIf="f.submitted && !username.valid">
+                  <span class="text-danger align-middle">
+                    <i class="fa fa-close"></i> Username is required
+                  </span>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" required />
+              </div>
+
+              <div class="form-group">
+                <div class="form-control-feedback" *ngIf="f.submitted && !password.valid">
+                  <span class="text-danger align-middle">
+                    <i class="fa fa-close"></i> Password is required
+                  </span>
+                </div>
+              </div>
+
+              <div class="checkbox">
+                <label>
+                  <input [(ngModel)]="model.rememberMe" class="form-check-input" name="rememberMe" type="checkbox"> Remember Me
+                </label>
+              </div>
+              <button [disabled]="loading" class="btn btn-lg btn-success btn-block">
+                <i class="fa fa-sign-in"></i> Login</button>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
