--- a/angular-app/src/app/components/new-category/new-category.component.html
+++ b/angular-app/src/app/components/new-category/new-category.component.html
@@ -1,16 +1,24 @@
-<h3> New Category</h3>
-<form [formGroup]="complexForm" (ngSubmit)="newCategory(complexForm.value)">
-  
-
-  <div class="form-group">
-    <label for="">
-      <b>Name</b>
-    </label>
-    <input type="text" class="form-control" id="title" formControlName="title" />
-    <div *ngIf="complexForm.controls['title'].hasError('required')" class="has-error">field required</div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Add New Category
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-lg-12">
+            <form role="form" [formGroup]="complexForm" (ngSubmit)="newCategory(complexForm.value)">
+              <div class="form-group">
+                <label>Name</label>
+                <input type="text" class="form-control" id="title" formControlName="title" />
+                <div *ngIf="complexForm.controls['title'].hasError('required')" class="has-error">field required</div>
+              </div>
+              <button type="submit" class="btn btn-primary" [disabled]="!complexForm.valid" style="margin-right: 10px;">Save</button>
+              <button type="reset" class="btn btn-success">Reset</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary" [disabled]="!complexForm.valid">Submit</button>
-  </div>
-</form>
+</div>
