--- a/angular-app/src/app/components/new-post/new-post.component.html
+++ b/angular-app/src/app/components/new-post/new-post.component.html
@@ -1,40 +1,41 @@
-<h3> New Post</h3>
-<form [formGroup]="complexForm" (ngSubmit)="newPost(complexForm.value)">
-  <div class="form-group">
-    <label for="">
-      <b>Category</b>
-    </label>
-
-    <select class="form-control" id="postCategoryId" formControlName="postCategoryId">
-      <option value="null" [selected]="true">Please select a category</option>
-      <option *ngFor="let c of listCategories" value="{{c.id}}">{{c.title}}</option>
-    </select>
-    <div *ngIf="complexForm.controls['postCategoryId'].hasError('required')" class="has-error">field required</div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Add New Post
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-lg-12">
+            <form role="form" [formGroup]="complexForm" (ngSubmit)="newPost(complexForm.value)">
+              <div class="form-group">
+                <label>Category</label>
+                <select class="form-control" id="postCategoryId" formControlName="postCategoryId">
+                  <option value="null" [selected]="true">Please select a category</option>
+                  <option *ngFor="let c of listCategories" value="{{c.id}}">{{c.title}}</option>
+                </select>
+                <div *ngIf="complexForm.controls['postCategoryId'].hasError('required')" class="has-error">field required</div>
+              </div>
+              <div class="form-group">
+                <label>Name</label>
+                <input type="text" class="form-control" id="title" formControlName="title" />
+                <div *ngIf="complexForm.controls['title'].hasError('required')" class="has-error">field required</div>
+              </div>
+              <div class="form-group">
+                <label>Image</label>
+                <input type="file" name="file" [ngModelOptions]="{standalone: true}" ngModel (change)="getFiles($event)">
+              </div>
+              <div class="form-group">
+                <label>Content</label>
+                <textarea class="form-control" rows="3" formControlName="content"></textarea>
+                <div *ngIf="complexForm.controls['content'].hasError('required')" class="has-error">field required</div>
+              </div>
+              <button type="submit" class="btn btn-primary" [disabled]="!complexForm.valid" style="margin-right: 10px;">Save</button>
+              <button type="reset" class="btn btn-success">Reset</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-group">
-    <label for="">
-      <b>Name</b>
-    </label>
-    <input type="text" class="form-control" id="title" formControlName="title" />
-    <div *ngIf="complexForm.controls['title'].hasError('required')" class="has-error">field required</div>
-  </div>
-  <div class="form-group">
-    <label for="">
-      <b>Image</b>
-    </label>
-    <br />
-    <br />
-    <input type="file" name="file" [ngModelOptions]="{standalone: true}" ngModel (change)="getFiles($event)">
-  </div>
-  <div class="form-group">
-    <label for="">
-      <b>Content</b>
-    </label>
-    <input type="text" class="form-control" id="image" formControlName="content" />
-    <div *ngIf="complexForm.controls['content'].hasError('required')" class="has-error">field required</div>
-  </div>
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary" [disabled]="!complexForm.valid">Submit</button>
-  </div>
-</form>
+</div>
