--- a/angular-app/src/app/components/posts/posts.component.html
+++ b/angular-app/src/app/components/posts/posts.component.html
@@ -1,49 +1,57 @@
-<div class="row">
-  <div class="col-lg-8">
-    <p>
-      <b>Filter by post name :</b>
-      <select [(ngModel)]="selectedItem" (ngModelChange)="searchPost()">
-        <option [value]="-1" selected>choose option</option>
-        <option *ngFor="let item of listPosts" [value]="item.id">{{item.title}}</option>
-      </select>
-    </p>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Post Tables
   </div>
-  <div class="col-lg-4">
-    <a class="btn btn-primary btn-xs pull-right " routerLink="/newpost" preserveQueryParams preserveFragment>
-      <b>+</b> Add new post </a>
-  </div>
-</div>
-<br>
-<div class="row">
-  <div class="col-lg-12">
-    <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Category</th>
-          <th>Name</th>
-          <th>Thumbnail</th>
-          <th>Content</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let post of filtredPosts">
-          <td>{{post.id}} </td>
-          <td>{{post.postCategoryId}}</td>
-          <td>{{post.title}}</td>
-          <td><img width="50" src = "https://localhost:44374/Upload/Posts/{{post.image}}" /></td>
-          <td>{{post.content}}</td>
-          <td>
-            <button class="btn btn-link" routerLink="/updatepost/{{post.id}}" preserveQueryParams preserveFragment>
-              <i class="fa fa-pencil" aria-hidden="true"></i> Update
-            </button>
-            <button class="btn btn-link" (click)="deletePost(post.id)">
-              <i class="fa fa-trash" aria-hidden="true"></i> Delete
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="panel-body">
+    <div class="table-responsive">
+      <div class="row">
+        <div class="col-lg-8">
+          <p>
+            <b>Filter by post name :</b>
+            <select [(ngModel)]="selectedItem" (ngModelChange)="searchPost()">
+              <option [value]="-1" selected>choose post</option>
+              <option *ngFor="let item of listPosts" [value]="item.id">{{item.title}}</option>
+            </select>
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <button type="button" class="btn btn-primary pull-right" routerLink="/newpost" preserveQueryParams preserveFragment>Add new post</button>
+        </div>
+        <br />
+        <br />
+        <br />
+      </div>
+      <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Category</th>
+            <th>Name</th>
+            <th>Thumbnail</th>
+            <th>Content</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let post of filtredPosts">
+            <td>{{post.id}} </td>
+            <td>{{post.postCategoryId}}</td>
+            <td>{{post.title}}</td>
+            <td>
+              <img width="50" src="https://localhost:44374/Upload/Posts/{{post.image}}" />
+            </td>
+            <td>{{post.content}}</td>
+            <td>
+              <button class="btn btn-link" routerLink="/updatepost/{{post.id}}" preserveQueryParams preserveFragment>
+                <i class="fa fa-pencil" aria-hidden="true"></i> Update
+              </button>
+              <button class="btn btn-link" (click)="deletePost(post.id)">
+                <i class="fa fa-trash" aria-hidden="true"></i> Delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
