--- a/angular-app/src/app/components/shared/app.component.html
+++ b/angular-app/src/app/components/shared/app.component.html
@@ -1,15 +1,281 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<div id="wrapper" *ngIf="userEmail;else isNotLogin">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navbar">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a [routerLink]="['/posts']">
+        <span style="font-size: 19px; text-transform: uppercase;position: relative;top: 30px;left: 20px;color: white;">Simple Blog Engine</span>
+      </a>
+    </div>
+    <ul class="nav navbar-top-links navbar-right">
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" [routerLink]="['/posts']">
+          <span class="top-label label label-danger">3</span>
+          <i class="fa fa-envelope fa-3x"></i>
+        </a>
+        <ul class="dropdown-menu dropdown-messages">
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <strong>
+                  <span class=" label label-danger">Andrew Smith</span>
+                </strong>
+                <span class="pull-right text-muted">
+                  <em>Yesterday</em>
+                </span>
+              </div>
+              <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <strong>
+                  <span class=" label label-info">Jonney Depp</span>
+                </strong>
+                <span class="pull-right text-muted">
+                  <em>Yesterday</em>
+                </span>
+              </div>
+              <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <strong>
+                  <span class=" label label-success">Jonney Depp</span>
+                </strong>
+                <span class="pull-right text-muted">
+                  <em>Yesterday</em>
+                </span>
+              </div>
+              <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a class="text-center" [routerLink]="['/posts']">
+              <strong>Read All Messages</strong>
+              <i class="fa fa-angle-right"></i>
+            </a>
+          </li>
+        </ul>
+      </li>
 
-<div class="container">
-  <div style="text-align:center">
-    <h1>
-      {{title}}
-    </h1>
-  </div>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" [routerLink]="['/posts']">
+          <span class="top-label label label-success">4</span>
+          <i class="fa fa-tasks fa-3x"></i>
+        </a>
+        <ul class="dropdown-menu dropdown-tasks">
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <p>
+                  <strong>Task 1</strong>
+                  <span class="pull-right text-muted">40% Complete</span>
+                </p>
+                <div class="progress progress-striped active">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                    style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <p>
+                  <strong>Task 2</strong>
+                  <span class="pull-right text-muted">20% Complete</span>
+                </p>
+                <div class="progress progress-striped active">
+                  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                    <span class="sr-only">20% Complete</span>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <p>
+                  <strong>Task 3</strong>
+                  <span class="pull-right text-muted">60% Complete</span>
+                </p>
+                <div class="progress progress-striped active">
+                  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                    style="width: 60%">
+                    <span class="sr-only">60% Complete (warning)</span>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <p>
+                  <strong>Task 4</strong>
+                  <span class="pull-right text-muted">80% Complete</span>
+                </p>
+                <div class="progress progress-striped active">
+                  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                    style="width: 80%">
+                    <span class="sr-only">80% Complete (danger)</span>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a class="text-center" [routerLink]="['/posts']">
+              <strong>See All Tasks</strong>
+              <i class="fa fa-angle-right"></i>
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" [routerLink]="['/posts']">
+          <span class="top-label label label-warning">5</span>
+          <i class="fa fa-bell fa-3x"></i>
+        </a>
+        <ul class="dropdown-menu dropdown-alerts">
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <i class="fa fa-comment fa-fw"></i>New Comment
+                <span class="pull-right text-muted small">4 minutes ago</span>
+              </div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <i class="fa fa-twitter fa-fw"></i>3 New Followers
+                <span class="pull-right text-muted small">12 minutes ago</span>
+              </div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <i class="fa fa-envelope fa-fw"></i>Message Sent
+                <span class="pull-right text-muted small">4 minutes ago</span>
+              </div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <i class="fa fa-tasks fa-fw"></i>New Task
+                <span class="pull-right text-muted small">4 minutes ago</span>
+              </div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a [routerLink]="['/posts']">
+              <div>
+                <i class="fa fa-upload fa-fw"></i>Server Rebooted
+                <span class="pull-right text-muted small">4 minutes ago</span>
+              </div>
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a class="text-center" [routerLink]="['/posts']">
+              <strong>See All Alerts</strong>
+              <i class="fa fa-angle-right"></i>
+            </a>
+          </li>
+        </ul>
+      </li>
 
-  <div *ngIf="userEmail">
-      <p><b>Welcome</b> {{userEmail}} (<a [routerLink]="['/login']">Logout</a>) </p>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" [routerLink]="['/posts']">
+          <i class="fa fa-user fa-3x"></i>
+        </a>
+        <ul class="dropdown-menu dropdown-user">
+          <li>
+            <a [routerLink]="['/posts']">
+              <i class="fa fa-user fa-fw"></i>User Profile</a>
+          </li>
+          <li>
+            <a [routerLink]="['/posts']">
+              <i class="fa fa-gear fa-fw"></i>Settings</a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a [routerLink]="['/login']">
+              <i class="fa fa-sign-out fa-fw"></i>Logout
+            </a>
+
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+  <nav class="navbar-default navbar-static-side" role="navigation">
+    <div class="sidebar-collapse">
+      <ul class="nav" id="side-menu">
+        <li>
+          <div class="user-section">
+            <div class="user-section-inner">
+              <img src="assets/img/user.jpg" alt="">
+            </div>
+            <div class="user-info">
+              <div>
+                <b> m_living </b>
+              </div>
+              <div class="user-text-online">
+                <span class="user-circle-online btn btn-success btn-circle "></span>&nbsp;Online
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="">
+          <a [routerLink]="['/categories']">
+            <i class="fa fa-dashboard fa-fw"></i>Category management
+          </a>
+        </li>
+        <li>
+          <a [routerLink]="['/posts']">
+            <i class="fa fa-bar-chart-o fa-fw"></i>Post management
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div id="page-wrapper">
+    <div class="row">
+      <div class="col-lg-12">
+        <app-notification></app-notification>
+        <router-outlet></router-outlet>
+      </div>
+    </div>
   </div>
+</div>
+
+<ng-template #isNotLogin>
   <app-notification></app-notification>
   <router-outlet></router-outlet>
- </div>
+</ng-template>
