--- a/angular-app/src/app/components/update-category/update-category.component.html
+++ b/angular-app/src/app/components/update-category/update-category.component.html
@@ -1,21 +1,30 @@
-<h3> Update Category</h3>
-<form ng-if="complexForm != null" [formGroup]="complexForm" (ngSubmit)="updateCategory(complexForm.value)">
-  <div class="form-group">
-    <label for="">
-      <b>Id</b>
-    </label>
-    <input type="text" class="form-control" [formControl]="complexForm.controls['id']" disabled>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Update Category
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-lg-12">
+            <form role="form" ng-if="complexForm != null" [formGroup]="complexForm" (ngSubmit)="updateCategory(complexForm.value)">
+              <div class="form-group">
+                <label for="">
+                  <b>Id</b>
+                </label>
+                <input type="text" class="form-control" [formControl]="complexForm.controls['id']" disabled>
+              </div>
+              <div class="form-group">
+                <label>Name</label>
+                <input type="text" class="form-control" [formControl]="complexForm.controls['title']">
+                <div *ngIf="complexForm.controls['title'].hasError('required')" class="has-error">field required</div>
+              </div>
+              <button type="submit" class="btn btn-primary" [disabled]="!complexForm.valid" style="margin-right: 10px;">Save</button>
+              <button type="reset" class="btn btn-success">Reset</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
- 
-  <div class="form-group">
-    <label for="">
-      <b>Name</b>
-    </label>
-    <input type="text" class="form-control" [formControl]="complexForm.controls['title']">
-    <div *ngIf="complexForm.controls['title'].hasError('required')" class="has-error">field required</div>
-  </div>
-  
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary" [disabled]="!complexForm.valid">Submit</button>
-  </div>
-</form>
+</div>
