--- a/angular-app/src/app/components/update-post/update-post.component.html
+++ b/angular-app/src/app/components/update-post/update-post.component.html
@@ -1,47 +1,51 @@
-<h3> Update Post</h3>
-<form ng-if="complexForm != null" [formGroup]="complexForm" (ngSubmit)="updatePost(complexForm.value)"  enctype="multipart/form-data">
-  <div class="form-group">
-    <label for="">
-      <b>Id</b>
-    </label>
-    <input type="text" class="form-control" [formControl]="complexForm.controls['id']" disabled>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Update Post
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-lg-12">
+            <form ng-if="complexForm != null" [formGroup]="complexForm" (ngSubmit)="updatePost(complexForm.value)" enctype="multipart/form-data">
+              <div class="form-group">
+                <label for="">
+                  <b>Id</b>
+                </label>
+                <input type="text" class="form-control" [formControl]="complexForm.controls['id']" disabled>
+              </div>
+              <div class="form-group">
+                <label>Category</label>
+                <select class="form-control" id="postCategoryId" formControlName="postCategoryId">
+                  <option value="null">Please select a category</option>
+                  <option *ngFor="let c of listCategories" value="{{c.id}}">{{c.title}}</option>
+                </select>
+                <div *ngIf="complexForm.controls['postCategoryId'].hasError('required')" class="has-error">field required</div>
+              </div>
+              <div class="form-group">
+                <label>Name</label>
+                <input type="text" class="form-control" [formControl]="complexForm.controls['title']">
+                <div *ngIf="complexForm.controls['title'].hasError('required')" class="has-error">field required</div>
+              </div>
+              <div class="form-group">
+                <label>Image</label>
+                <br />
+                <img width="50" [src]="imageUrl" />
+                <br />
+                <br />
+                <input type="file" name="file" [ngModelOptions]="{standalone: true}" ngModel (change)="getFiles($event)">
+              </div>
+              <div class="form-group">
+                <label>Content</label>
+                <textarea class="form-control" rows="3" [formControl]="complexForm.controls['content']"></textarea>
+                <div *ngIf="complexForm.controls['content'].hasError('required')" class="has-error">field required</div>
+              </div>
+              <button type="submit" class="btn btn-primary" [disabled]="!complexForm.valid" style="margin-right: 10px;">Save</button>
+              <button type="reset" class="btn btn-success">Reset</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="">
-      <b>Category</b>
-    </label>
-
-    <select class="form-control" id="postCategoryId" formControlName="postCategoryId">
-      <option value="null">Please select a category</option>
-      <option *ngFor="let c of listCategories" value="{{c.id}}">{{c.title}}</option>
-    </select>
-    <div *ngIf="complexForm.controls['postCategoryId'].hasError('required')" class="has-error">field required</div>
-  </div>
-  <div class="form-group">
-    <label for="">
-      <b>Name</b>
-    </label>
-    <input type="text" class="form-control" [formControl]="complexForm.controls['title']">
-    <div *ngIf="complexForm.controls['title'].hasError('required')" class="has-error">field required</div>
-  </div>
-  <div class="form-group">
-    <label for="">
-      <b>Image</b>
-    </label>
-    <br />
-    <img width="50" [src] = "imageUrl" />
-    <br />
-    <br />
-    <input type="file" name="file" [ngModelOptions]="{standalone: true}" ngModel (change)="getFiles($event)">
-  </div>
-  <div class="form-group">
-    <label for="">
-      <b>Content</b>
-    </label>
-    <input type="text" class="form-control" [formControl]="complexForm.controls['content']">
-    <div *ngIf="complexForm.controls['content'].hasError('required')" class="has-error">field required</div>
-  </div>
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary" [disabled]="!complexForm.valid">Submit</button>
-  </div>
-</form>
+</div>
